--- a/src/default.scss
+++ b/src/default.scss
@@ -20,9 +20,9 @@ ul li {
 	list-style: none;
 }
 .wrapper {
-	width: 100%;
+	// width: 100%;
 	margin: 0 auto;
-	// padding: 0 3rem;
+	padding: 0 3rem;
 	max-width: 1200px;
 }
 .ic {
@@ -35,9 +35,39 @@ input::-webkit-inner-spin-button {
 	margin: 0;
 }
 
+.spinner {
+	width: 100%;
+	animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
 // padding
 .p {
 	&--70 {
-		padding: 70px 0;
+		padding-top: 70px;
+		padding-bottom: 70px;
 	}
+	&--horizontal {
+		&--5 {
+			padding-left: 5px;
+			padding-right: 5px;
+		}
+		&--10 {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+	}
+}
+
+.page__title {
+	font-weight: 200;
+	text-transform: uppercase;
 }
