--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -15,18 +15,21 @@ $descriptionFontSizeDesktop: 1.8rem;
 
 .header {
 	position: relative;
-	width: 100%;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	// background settings
 	background-image: $backgroundImage;
 	background-size: cover;
 	background-position-x: 70%;
+	
 	z-index: 0;
-
-	&__content {
+	.wrapper {
 		width: 100%;
+	}
+	&__content {
 		position: relative;
 		text-align: center;
 		z-index: 2;
@@ -47,6 +50,7 @@ $descriptionFontSizeDesktop: 1.8rem;
 			font-size: 1.6rem;
 			line-height: 30px;
 			font-weight: 100;
+			text-align: justify;
 		}
 	}
 	&::after {
@@ -62,13 +66,13 @@ $descriptionFontSizeDesktop: 1.8rem;
 	@include bp(desktop) {
 		justify-content: start;
 		&__content {
-			width: 600px;
 			text-align: left;
 			&__title {
 				font-size: $titleFontSizeDesktop;
 				line-height: 60px;
 			}
 			&__description {
+				max-width: 500px;
 				font-size: $descriptionFontSizeDesktop;
 			}
 		}
